--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
 </head>
 
     <!-- Meta Tags -->
-    <meta name="description" content="Show yourself brightly with Braxton - unique and creative portfolio and resume template!">
-    <meta name="keywords" content="mix_design, resume, portfolio, personal page, cv, template, one page, responsive, html5, css3, creative, clean">
+    <meta name="description" content="Nima Karimi | Portfolio">
+    <meta name="keywords" content="nima karimi, Nima Karimi, personal website, Personal Website, Portfolio, portfolio, CV, cv, html, nimanoms, nima, karimi, Nima, Karimi">
     <meta name="author" content="mix_design">
 
     <!-- Viewport Meta-->
@@ -31,8 +31,7 @@
     <!-- Facebook Metadata Start -->
     <meta property="og:image:height" content="1200">
     <meta property="og:image:width" content="1200">
-    <meta property="og:title" content="Braxton - Personal Portfolio & Resume HTML Template">
-    <meta property="og:description" content="Show yourself brightly with Braxton - unique and creative portfolio and resume template!">
+    <meta property="og:title" content="Nima Karimi Portfolio">
     <meta property="og:url" content="https://mixdesign.dev/themeforest/braxton">
     <meta property="og:image" content="https://mixdesign.dev/themeforest/braxton/img/favicon/og-image.jpg">
     <!-- Facebook Metadata End -->
@@ -769,5 +768,6 @@
     <!-- Load Scripts End -->
     
   </body>
+
 
 </html>
