--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <!-- Page Title -->
     <head>
   <meta charset="UTF-8">
-  <title>Nima's Hub!</title>
+  <title>Nima Karimi | Software Engineer Portfolio</title>
 
   <link rel="stylesheet" type="text/css" href="css/plugins.css">
 </head>
@@ -771,3 +771,4 @@
 
 
 </html>
+
